melhorias de design

--- a/generators/app/templates/ui5/webapp/i18n/i18n_pt_BR.properties
+++ b/generators/app/templates/ui5/webapp/i18n/i18n_pt_BR.properties
@@ -17,6 +17,7 @@ RequestPurchese.AttendedPartial=Parcialmente
 RequestPurchese.ApprovedPartial=Parcialmente
 RequestPurchese.OnApproval=Em Aprovação
 RequestPurchase.Approval=Confirmar a aprovação dessa Solicitação?
+Document.Cancel=Deseja cancelar esse documento?
 RequestPurchase.Confirm=Confirmar
 RequestPurchase.Reprove=Reprovar solicitações selecionadas?
 RequestPurchase.ApproveAll=Aprovar todas as solicitações de compras?
@@ -65,6 +66,7 @@ Commom.RejectAll=Reprovar Todos
 Commom.Edit=Editar
 Commom.Save=Salvar
 Commom.Cancel=Cancelar
+Common.Confirm = Confirmar
 Commom.Add=Novo
 Commom.Selected=Selecionado(s)
 Commom.NoProducts=Nenhum produto encontrado
@@ -245,7 +247,7 @@ Commom.Order=Ordenar
 Commom.Filter=Filtrar
 Commom.SelectRangeDate=Selecione o intervalo de data
 Commom.ClearFilter=Limpar Filtros
-Common.Until=Até
+Commom.Until=Até
 Commom.ClearFilterToolTip=Limpa os valores do filtro
 Commom.CancelFilterToolTip=Remove o filtro e atualiza os dados
 Commom.SessionExpired=Sua sessão expirou, efetue o login novamente
@@ -262,10 +264,139 @@ Commom.ApprovalStatusResumeTittle=Resumo estapas de aprovação
 Commom.Previous=Anterior
 Commom.Next=Próximo(a)
 Commom.ServeError=Erro ao acessar o servidor
-Project.WorkPlan=Plano de Trabalho
+Project.Budget=Orçamento
 RequestPurchaseDetail.ProjectCode=Código do Projeto
 Project.CordinatorName=Coordenador
 Project.Manager=Gerente
 Project.Executed=Executado
-Project.Remaning=Saldo
+Project.Remaning=Saldo Atual
 Commom.GeneralSettings=Geral
+
+
+#Message Alert
+
+Common.Msg.Warning = Atenção
+Common.Msg.Ops = Ops, ocorreu algum erro
+
+
+#UnitMeasurement 
+
+
+Commom.Settings= Configurações
+Common.Settings.Unity = Unidades de Medidas
+
+MeasurementUnitGroup.FormMsgSave = Salvar grupo de unidades
+MeasurementUnitGroup.FormTitle = Cadastrar Grupo
+MeasurementUnitGroup.FormUgpName = Nome do Grupo
+MeasurementUnitGroup.FormBaseUom = Unidade Base 
+MeasurementUnitGroup.FormUgpCode =  Descrição do Grupo
+MeasurementUnitGroup.TableAlternativeQty = Quantidade alternativa
+MeasurementUnitGroup.TableUnitAlternative = Unidade alternativa
+MeasurementUnitGroup.TableQtyBase = Quantidade base
+MeasurementUnitGroup.TableDelete = Excluir
+MeasurementUnitGroup.SaveGroup = Salvar Grupo
+MeasurementUnitGroup.UpdateGroup = Atualizar grupo
+MeasurementUnitGroup.UpdateSuccess = Grupo de unidades atualizado com sucesso!
+MeasurementUnitGroup.CreateSuccess = Grupo de unidades criado com sucesso!
+MeasurementUnit.MsgDeleteFalse = Não foi possível deletar Unidade! 
+MeasurementUnit.MsgDeleteTrue = Unidade deletada com sucesso!
+MeasurementUnit.MsgCancel = Unidade foi mantida!
+MeasurementUnit.MsgQuestionDelete = Deseja realmente excluir esta unidade?
+MeasurementUnit.MsgRemove = Deseja remover unidades selecionadas?
+MeasurementUnit.MsgRemoveTrue = Unidades removidas com sucesso!
+MeasurementUnit.MsgQuestionCancel = Deseja cancelar edições de unidade?
+MeasurementUnitGroup.MsgQuestionDelete = Deseja realmente excluir este grupo?
+MeasurementUnit.MsgCreateSuccess = Unidade criada com sucesso!
+MeasurementUnit.MsgUpdateSuccess = Unidade atualziada com sucesso!
+MeasurementUnit.MsgQuestionSave = Deseja salvar alterações?
+MeasurementUnit.MsgTextWarning = Ao clicar em ok você perderá todas as edições realizadas
+MeasurementUnit.MsgUpdateSuccess = Unidades atualizadas com sucesso!
+MeasurementUnit.MsgTextSave = Para que as alterações surtam efeito, é necessário salvar
+MeasurementUnit.TableName = Nome da Unidade
+MeasurementUnit.TableUomCode = Código
+MeasurementUnit.TableHeight = Altura
+MeasurementUnit.TableVolume = Volume
+MeasurementUnit.TableVolUnit = Unidade de Volume
+MeasurementUnit.TableLength = Comprimento
+MeasurementUnit.TableWidth1 = Largura
+MeasurementUnit.TableWeight = Peso
+MeasurementUnit.TableEdit = Editar
+MeasurementUnit.TableDelete = Excluir
+
+MeasurementUnit.TableButtonEdit = Editar
+MeasurementUnit.ButtonReset = Resetar
+MeasurementUnit.ButtonSort = Ordernar
+
+MeasurementUnit.FormUomCode = Codigo UM
+MeasurementUnit.FormVolUnit = Volume de UM
+MeasurementUnit.FormName = Nome da UM
+MeasurementUnit.FormHeight = Altura
+MeasurementUnit.FormVolume = Volume
+MeasurementUnit.FormWidth1 = Largura
+MeasurementUnit.FormLength = Comprimento
+MeasurementUnit.FormWeight = Peso
+MeasurementUnit.FormUnitVol = Unidade de Volume de medida
+MeasurementUnit.FormTitle = Salvar unidade
+MeasurementUnit.TabUnit = Unidade
+MeasurementUnit.TabGroup = Grupo
+MeasurementUnitGroup.TableName = Nome do Grupo
+MeasurementUnitGroup.TableDescription = Descrição do Grupo
+MeasurementUnitGroup.TableEdit = Editar
+MeasurementUnitGroup.TableDelete = Deletar
+MeasurementUnitGroup.ButtonReset = Resetar
+MeasurementUnitGroup.ButtonSort = Ordernar
+MeasurementUnitGroup.ButtonGroup = Agrupar
+MeasurementUnitGroup.AddLine = Adicionar
+MeasurementUnitGroup.MsgRemoveSuccess = Grupo removido com sucesso!
+
+Commom.ProjectExtract=Extrato do Projeto
+ProjectExtract.ProjectCode=Código do Projeto
+ProjectExtract.SelectDate=Selecione o intervalo de datas
+Project.Extract=Extrato
+Project.ExtractFull=Extrato Completo
+Commom.RefDate=Referência
+Commom.History=Hitórico
+Commom.Type=Tipo
+Commom.Debit=Débito
+Commom.Credit=Credito
+Commom.Balance=Saldo
+Commom.PrcName=Rubrica
+Commom.PreviusBalance=Saldo Anterior
+RubricaInfo.Resume=Resumo da Rubrica 
+Commom.InitBalance=Saldo Inicial
+Commom.ShowingPeriod=Exibindo extrato para o período
+Commom.ShowingFullExtract=Exibindo extrato completo
+Project.Earnings=Ganhos
+WorkPlan.SelectProject=Selecione um projeto
+DocumentNumber.Code =Código
+DocumentNumber.InitNumber =Número Inicial
+DocumentNumber.NextNumber =Próximo Número
+DocumentNumber.BeginString=Prefixo
+DocumentNumber.NumDigits =Qantidade de Dígitos
+DocumentNumber.ObjType=Tipo de Documento
+Project.Period=Período
+Commom.TotalBalance=Saldo Total
+Project.PercentOverInitBalance=% em relação ao saldo inicial
+
+PurchaseRequest.ProjectNotLinked=Solicitação de compra sem vinculo com projeto
+Document.Caceled=Documento cancelado
+
+Commom.ProjectsByUser.Title = Projetos por usuário
+ProjectsByUser.CodProject = Código
+ProjectsByUser.NameProject = Nome do projeto
+ProjectByUser.NoProjectsFound = Nenhum projeto encontrado
+ProjectByUser.SelectProjects = Selecionar projetos disponíveis
+ProjectByUser.Projects = Projetos
+ProjectByUser.Users = Usuários
+ProjectByUser.Username = Usuário
+ProjectByUser.Department = Departamento
+ProjectByUser.Edit = Editar
+ProjectByUser.Reset = Resetar
+ProjectByUser.ProjectPerUser = Projetos por usuário
+ProjectByUser.ProjectsLinked = Projetos vinculados
+ProjectByUser.ProjectsUnLinked = Projetos disponíveis
+ProjectByUser.QstMsgRemoveProject = Deseja remover este projeto?
+ProjectByUser.MsgCaseSucessRemove = Projeto deletado com sucesso!
+ProjectByUser.MsgUpdateRules = Permissões de projetos deste usuário foram atualizadas com sucesso!
+ProjectByUser.TotalUsersByProject = Total de usuários
+Notifications.NoData=Sem Notificações
