--- a/generators/app/templates/ui5/webapp/i18n/i18n_pt_BR.properties
+++ b/generators/app/templates/ui5/webapp/i18n/i18n_pt_BR.properties
@@ -1,402 +1,29 @@
-##DashBoard
-MasterView.tittle=Contract One
-appDescription=Gestão da Cadeia de Suprimentos e Execução de Contratos de Serviços
+#DashBoard
+App.Name=<%= appName %>
+App.Description=<%= appDescription %>
 
-#Solicitação
-RequestPurchese.Id=Solicitação
-RequestPurchese.All=Todas
-RequestPurchese.Approved=Aprovadas
-RequestPurchese.Pending=Pendentes
-RequestPurchese.Canceled=Canceladas
-RequestPurchese.CorrectionRequest=Correção
-RequestPurchese.Attended=Atendida
-RequestPurchese.Closed=Fechados
-RequestPurchese.Repproved=Reprovadas
-RequestPurchese.OnQuotation=Em Cotação
-RequestPurchese.AttendedPartial=Parcialmente
-RequestPurchese.ApprovedPartial=Parcialmente
-RequestPurchese.OnApproval=Em Aprovação
-RequestPurchase.Approval=Confirmar a aprovação dessa Solicitação?
-Document.Cancel=Deseja cancelar esse documento?
-RequestPurchase.Confirm=Confirmar
-RequestPurchase.Reprove=Reprovar solicitações selecionadas?
-RequestPurchase.ApproveAll=Aprovar todas as solicitações de compras?
-RequestPurchase.ReproveAll=Reprovar todas as solicitações?
-
-#Requisiçao Detail
-RequestPurchaseDetail.Company=Empresa
-RequestPurchaseDetail.Partner=Parceiro
-RequestPurchaseDetail.Notes=Comentários
-RequestPurchaseDetail.Itens=Itens
-RequestPurchaseDetail.ItemCode=Codigo
-RequestPurchaseDetail.Item=Item
-RequestPurchaseDetail.Quantity=Quantidade
-RequestPurchaseDetail.RequestId=Solicitante
-RequestPurchaseDetail.Project=Projeto
-RequestPurchaseDetail.DateNeed= Entrega
-RequestPurchaseDetail.DateAdd=Criado
-RequestPurchaseDetail.Status=Status
-RequestPurchaseDetail.QuantityItems=Total de Itens
-RequestPurchaseDetail.CenterCost=Centro de custos
-RequestPurchaseDetail.Attach=Anexos
-RequestPurchaseEdit.Updated=Solicitação de compras atualizada
-RequestPurchaseEdit.Created=Solicitação de compras criada
-
-#Request Purchase Edit
-RequestPurcheseEdit.Title=Editar solicitação de compras
-RequestPurchaseEdit.Cabecalho=Cabeçalho Solicitação
-RequestPurchaseEdit.CenterCost=Centro de Custos
-RequestPurchaseEdit.MeasurementUnit=Unidade
-
-#Commom
-Commom.Menu.RequestPurchese=Solicitação de compras
-Commom.Menu.RequestPurcheseDetail=Detalhes
-Commom.tableNoDataText=Sem dados 
-Commom.tableIDColumnTitle=Código
-Commom.tableNameColumnTitle=Descrição
-Commom.tablePriceColumnTitle=Preço
-Commom.tableCompanyName=Empresa
-Commom.tableCommentsColumnTitle=Comentários
-Commom.tableStatusColumnTitle=Status
-Commom.tableDateAddColumnTitle=Adicionado
 Commom.Accept=Aprovar
 Commom.Reject=Reprovar
-Commom.AcceptAll=Aprovar Todos
-Commom.RejectAll=Reprovar Todos
 Commom.Edit=Editar
 Commom.Save=Salvar
 Commom.Cancel=Cancelar
-Common.Confirm = Confirmar
+Commom.Confirm = Confirmar
 Commom.Add=Novo
 Commom.Selected=Selecionado(s)
 Commom.NoProducts=Nenhum produto encontrado
 Commom.SelectProducts=Selecione os itens
 Commom.CenterCosts=Centros de Custo
 
-#Request Status
-RequestStatus.Title=Status Solicitação 
+Notifications.NoData=Nenhuma Notificação
 
-#Approvals
-Approvals.Title=Aprovações
-Approvals.Request=Solicitação de Compra
-
-#Contracts
-Contract.Title=Contratos
-
-#RequestPurchaseWizard                        
-RequestPurchaseWizard.SelectItems=Selecione os itens da cotação
-RequestPurchaseWizard.SelectCenterCosts=Informe os centro de custos
-RequestPurchaseWizard.Items=Itens
-RequestPurchaseWizard.Title=Criar nova Solicitação de compras
-RequestPurchaseEdit.CompanyAndProject=Filial e Projeto 
-RequestPurchaseWizard.MinimumLines=Uma Solicitação deve conter um ou mais itens
-
-Menu.home=Home
-Menu.login=Entrar
-Menu.signup=Cadastro     
-RequestPurchaseDetail.Contract=Contrato
-Commom.NoUsers=Dados não encontrados
-Commom.SelectAnUSer=Informe o solicitante
-Commom.NoContracts=Nenhum contrato encontrado
-Commom.SelectAContract=Selecione um contrato
-RequestPurchaseDetail.RequesterId=Solicitante
-RequestPurchaseEdit.DateNeed=Data da Necessidade
-RequestPurchaseEdit.DateAndStatus=Datas e Status
-RequestPurchaseEdit.InsertItems=Adicionar Itens 
-RequestPurchaseDetail.Priority=Prioridade
-RequestPurchaseEdit.FileUpload=Para adicionar arquivos, você pode arrastar e soltar na área abaixo.
-RequestPurchaseEdit.Notes=Observações
-RequestPurchaseEdit.RequestNotes=Informe as observações para essa Solicitação se necessário.
-Approval.RequestPurchase=Solicitação de Compras
-Approval.RequestsPurchase=Solicitações de Compras
-Approval.Contracts=Contratos
-Commom.Menu.Approvals=Aprovações
-Commom.Added = Criado
-Approval.Contracts=Contratos
-Commom.Id=Código
-Commom.ObjectType=Tipo
-Approvals.PendingApproval=Pendente de Aprovação
-Commom.Remove=Remover
-Commom.Ok=OK
-Commom.ApplyOnLines=Aplicar nas linhas
-Commom.CenterCostsOnLines=Centros de Custo do cabecalho
-Commom.SetCenterCostOnAllLines=Aplicar centros de custo do cabeçalho em todas as linhas?
-Commom.ConfirmItemRemove=Confirmar remoção do item?
-Commom.LineCenterCostsUpdated = Centros de custo da linha atualizado.
-Commom.LinesCenterCostsUpdated = Centros de custo das linhas atualizado.
-RequestPurchaseDetail.Historic=Histórico
-Commom.NoHistory=Documento sem Histórico.
-Commom.Comments=Comentários
-Item.IsSale=Item de venda
-Item.IsPurchase=Item de compra
-Item.OnHand=Em estoque
-Item.InvntItem=Item de estoque
-Commom.ItemInfo=Item
-Commom.Close=Fechar
-Commom.Yes=Sim
-Commom.No=Não
-Commom.SetCenterCostOnLine=Copiar do cabecalho
-Commom.tableDateNeedColumnTitle=Necessidade
-Commom.Approved=Aprovado
-Commom.Menu.ApprovalModels=Modelos de aprovação
-ApprovalModels.RequestPurchase=Solicitação de Compras
-ApprovalModels.Contracts=Contratos
-ApprovalModels.Measurements=Medições
-ApprovalModel.Id=Código
-Commom.Document=Documento
-ApprovalModel.EffectiveDate=Vigência
-ApprovalModel.User=Usuario
-ApprovalModels.All=Todos
-ApprovalModel.Id=Id
-Commom.Document=Document
-ApprovalModel.IsRange=Intervalo de valores
-ApprovalModel.IsAuto=Automatico
-ApprovalModel.Vigency=Vigência
-ApprovalModel.ApprovalModel=Modelo de aprovação
-ApprovalModel.IsQuery=Consulta
-ApprovalModel.ValueRange=Intervalos de valores
-ApprovalModel.AnyValue=Qualquer valor
-ApprovalModel.StartAt=Apartir de
-ApprovalModel.EntAt=Até o valor
-ApprovalModel.RangeDecision=Decisão
-ApprovalModel.ApprovalLevels=Níveis de Aprovação
-ApprovalModel.Sequence=Sequencia
-ApprovalModel.Description=Descrição
-ApprovalModel.FontColor=Cor Fonte
-ApprovalModel.BackColor=Cor Fundo
-ApprovalModel.ApprovalLevelsNoData=Nenhum nível definido
-ApprovalModel.ValueRangeNoData=Nenhum fluxo definido
-ApprovalModel.Approvers=Usuários
-ApprovalModel.ApproversNoData=Nenhum aprovador
-ApprovalModel.UserCode=Código do usuário
-ApprovalModel.UserName=Nome
-ApprovalModel.UserApprover=Usuário aprovador
-ApprovalModel.IsAutoSelectedMessageStrip=Para o modelo automático, é necessário apenas definir a data de vigência e salvar.
-ApprovalModel.HasRangeSelectedMessageStrip=Com o intervalo de valores, você pode especificar um critério de valor para esse tipo de documento,  e definir os níveis necessários para cada intervalo ou para qualquer valor.
-ApprovalModel.SelectARange=Selecione um fluxo
-ApprovalModel.SelectALevel=Selecione um nível 
-ApprovalModel.DocumentType=Documento
-ApprovalModel.Vigency=Vigência
-ApprovalModel.removelAll=Eliminar todos
-ApprovalModel.removeSelected=Remover item selecionado
-App.Theme=Tema
-App.Density=Densidade
-App.ConfigTheme=Confirações de tema
-ApprovalModel.RangeAnyValueDefined=Você definiu um intervalo para qualquer valor, todos os novos documentos desse tipo cairam para esse fluxo de aprovação
-ApprovalModel.AlertRemoveOtherRanges=Ao definir este intervalo como qualquer valor os outros intervalos seram excluidos, deseja continuar?
-App.ChangeTheme=Alterar tema
-ApprovalModel.Company=Empresa
-ApprovalModel.Created=Modelo de aprovação criado
-Commom.Document=Documento
-ApprovalModel.ApprovalFlow=Fluxo de Aprovação
-ApprovalModel.QueryFilter=Consulta
-ApprovalModel.RequestFields=Campos
-ApprovalModel.HowToBuildQuery=No exemplo abaixo, seram enviadas para o fluxo de aprovação todas as novas solicitações cadastradas para empresa 3 vinculadas ao projeto 0001.
-ApprovalModel.HowToBuildQueryExemple=[CompanyId] = 3 AND [PrjCode] = '00001'
-ApprovalModel.TestQuery=Testar consulta
-ApprovalModel.QueryValidated=Consulta Validada com sucesso
-ApprovalModel.HasQuerySelectedMessageStrip=Nesta opção você pode definir uma consulta como critério para o fluxo de aprovação
-Commom.Login=Entrar
-Commom.Menu.LoginPage=Login
-Commom.EnterPass=Sua Senha
-Commom.Password=Senha
-Commom.User= Usuário
-errorOnRequest = Não foi possível obter informações requisitadas
-defaultMessageError = Sorry, We can not process your request
-invalidUser = Credenciais de usuário inválidas
-ApprovalModel.NoLoggedUser=Faça login para utilizar o sistema
-Commom.LogOut=Sair
-Commom.Menu.Logged=Usuário Conectado
-Commom.PendingItems=Documentos Pendentes
-RequestPurchaseLine.Id=N° Linha
-RequestPurchaseApproval.QuantityApproved=Quantidade a ser liberada nessa aprovação
-RequestPurchaseApproval.Approved=Approvar
-Commom.Settings=Configurações
 Commom.Notifications=Notificações
-Commom.Decision=Decisão
-Commom.VigencyAt=Válido até
-Commom.ChoseYourAction=Selecione sua ação
-Commom.Correction=Solicitar correção
-RequestPurchaseApproval.Search=Procure pelo codigo do processo ou comentários
-RequestPurchaseDetail.DateUpdate=Última atualização
+Commom.MailIcon=sap-icon://email
+Commom.MailReadIcon=sap-icon://email-read
 Commom.Menu.Settings=Configurações
-Settings.User=Usuário
-Settings.Pagination=Paginação, quantidade de itens:
-Settings.PerformanceLow=Baixo desempenho
-Settings.PerformanceHigh=Melhor desempenho
-RequestPurchese.Open=Aberto
-RequestPurchaseDetail.Step=Etapas de Aprovação
-Approvals.ReturnTryApproval=Resultado da tentativa de aprovação
-Approval.SuccessOperation=Operação reelizada com sucesso, confirme para  finalizar.
-Approvals.CommitSuccess=Confirmar parcialmente
-Approvals.CencelOperation=Cancelar Toda a operação
-Approvals.HeaderErros=Os seguintes itens não puderam ser aprovados
-Approval.HeaderSuccess=Os seguintes itens obtiveram sucesso na tentativa, mas precisam ser confirmados
-Approvals.HeaderErros=Visualizar documento
-Commom.ProcessId=Processo
-Commom.UserConfig=Configurações
-Commom.DocEntry=Doc Entry
-Commom.DocNum=Doc Num
-Commom.DocType=Doc Type
-Commom.CANCELED=Cancelado
-RequestPurchaseDetail.DocDueDate=Vencimento
-RequestPurchaseDetail.CreateDate=Data Criação
-RequestPurchaseDetail.CardCode=Parceiro de Negócios
-Commom.CustomCol=Personalizar Colunas
-Commom.Order=Ordenar
-Commom.Filter=Filtrar
-Commom.SelectRangeDate=Selecione o intervalo de data
-Commom.ClearFilter=Limpar Filtros
-Commom.Until=Até
-Commom.ClearFilterToolTip=Limpa os valores do filtro
-Commom.CancelFilterToolTip=Remove o filtro e atualiza os dados
-Commom.SessionExpired=Sua sessão expirou, efetue o login novamente
-Commom.DocumentNumber=Numeração de documentos
-Settings.Code =Código
-Settings.InitialNumber =Número Inicial
-Settings.NextNumber =Próximo Número
-Settings.BeginString =Prefixo
-Settings.NumDigits =Qantidade de Dígitos
-Settings.ObjType =Tipo de Documento
-Commom.informAnComment=O motivo da reprovação é obrigatório
-App.MaxRecordsPerSearch=Quantidade Máxima de registros por busca
-Commom.ApprovalStatusResumeTittle=Resumo estapas de aprovação
-Commom.Previous=Anterior
-Commom.Next=Próximo(a)
-Commom.ServeError=Erro ao acessar o servidor
-Project.Budget=Orçamento
-RequestPurchaseDetail.ProjectCode=Código do Projeto
-Project.CordinatorName=Coordenador
-Project.Manager=Gerente
-Project.Executed=Executado
-Project.Remaning=Saldo Atual
+Settings.User=Usuario
 Commom.GeneralSettings=Geral
-
-
-#Message Alert
-
-Common.Msg.Warning = Atenção
-Common.Msg.Ops = Ops, ocorreu algum erro
-
-
-#UnitMeasurement 
-
-
-Commom.Settings= Configurações
-Common.Settings.Unity = Unidades de Medidas
-
-MeasurementUnitGroup.FormMsgSave = Salvar grupo de unidades
-MeasurementUnitGroup.FormTitle = Cadastrar Grupo
-MeasurementUnitGroup.FormUgpName = Nome do Grupo
-MeasurementUnitGroup.FormBaseUom = Unidade Base 
-MeasurementUnitGroup.FormUgpCode =  Descrição do Grupo
-MeasurementUnitGroup.TableAlternativeQty = Quantidade alternativa
-MeasurementUnitGroup.TableUnitAlternative = Unidade alternativa
-MeasurementUnitGroup.TableQtyBase = Quantidade base
-MeasurementUnitGroup.TableDelete = Excluir
-MeasurementUnitGroup.SaveGroup = Salvar Grupo
-MeasurementUnitGroup.UpdateGroup = Atualizar grupo
-MeasurementUnitGroup.UpdateSuccess = Grupo de unidades atualizado com sucesso!
-MeasurementUnitGroup.CreateSuccess = Grupo de unidades criado com sucesso!
-MeasurementUnit.MsgDeleteFalse = Não foi possível deletar Unidade! 
-MeasurementUnit.MsgDeleteTrue = Unidade deletada com sucesso!
-MeasurementUnit.MsgCancel = Unidade foi mantida!
-MeasurementUnit.MsgQuestionDelete = Deseja realmente excluir esta unidade?
-MeasurementUnit.MsgRemove = Deseja remover unidades selecionadas?
-MeasurementUnit.MsgRemoveTrue = Unidades removidas com sucesso!
-MeasurementUnit.MsgQuestionCancel = Deseja cancelar edições de unidade?
-MeasurementUnitGroup.MsgQuestionDelete = Deseja realmente excluir este grupo?
-MeasurementUnit.MsgCreateSuccess = Unidade criada com sucesso!
-MeasurementUnit.MsgUpdateSuccess = Unidade atualziada com sucesso!
-MeasurementUnit.MsgQuestionSave = Deseja salvar alterações?
-MeasurementUnit.MsgTextWarning = Ao clicar em ok você perderá todas as edições realizadas
-MeasurementUnit.MsgUpdateSuccess = Unidades atualizadas com sucesso!
-MeasurementUnit.MsgTextSave = Para que as alterações surtam efeito, é necessário salvar
-MeasurementUnit.TableName = Nome da Unidade
-MeasurementUnit.TableUomCode = Código
-MeasurementUnit.TableHeight = Altura
-MeasurementUnit.TableVolume = Volume
-MeasurementUnit.TableVolUnit = Unidade de Volume
-MeasurementUnit.TableLength = Comprimento
-MeasurementUnit.TableWidth1 = Largura
-MeasurementUnit.TableWeight = Peso
-MeasurementUnit.TableEdit = Editar
-MeasurementUnit.TableDelete = Excluir
-
-MeasurementUnit.TableButtonEdit = Editar
-MeasurementUnit.ButtonReset = Resetar
-MeasurementUnit.ButtonSort = Ordernar
-
-MeasurementUnit.FormUomCode = Codigo UM
-MeasurementUnit.FormVolUnit = Volume de UM
-MeasurementUnit.FormName = Nome da UM
-MeasurementUnit.FormHeight = Altura
-MeasurementUnit.FormVolume = Volume
-MeasurementUnit.FormWidth1 = Largura
-MeasurementUnit.FormLength = Comprimento
-MeasurementUnit.FormWeight = Peso
-MeasurementUnit.FormUnitVol = Unidade de Volume de medida
-MeasurementUnit.FormTitle = Salvar unidade
-MeasurementUnit.TabUnit = Unidade
-MeasurementUnit.TabGroup = Grupo
-MeasurementUnitGroup.TableName = Nome do Grupo
-MeasurementUnitGroup.TableDescription = Descrição do Grupo
-MeasurementUnitGroup.TableEdit = Editar
-MeasurementUnitGroup.TableDelete = Deletar
-MeasurementUnitGroup.ButtonReset = Resetar
-MeasurementUnitGroup.ButtonSort = Ordernar
-MeasurementUnitGroup.ButtonGroup = Agrupar
-MeasurementUnitGroup.AddLine = Adicionar
-MeasurementUnitGroup.MsgRemoveSuccess = Grupo removido com sucesso!
-
-Commom.ProjectExtract=Extrato do Projeto
-ProjectExtract.ProjectCode=Código do Projeto
-ProjectExtract.SelectDate=Selecione o intervalo de datas
-Project.Extract=Extrato
-Project.ExtractFull=Extrato Completo
-Commom.RefDate=Referência
-Commom.History=Hitórico
-Commom.Type=Tipo
-Commom.Debit=Débito
-Commom.Credit=Credito
-Commom.Balance=Saldo
-Commom.PrcName=Rubrica
-Commom.PreviusBalance=Saldo Anterior
-RubricaInfo.Resume=Resumo da Rubrica 
-Commom.InitBalance=Saldo Inicial
-Commom.ShowingPeriod=Exibindo extrato para o período
-Commom.ShowingFullExtract=Exibindo extrato completo
-Project.Earnings=Ganhos
-WorkPlan.SelectProject=Selecione um projeto
-DocumentNumber.Code =Código
-DocumentNumber.InitNumber =Número Inicial
-DocumentNumber.NextNumber =Próximo Número
-DocumentNumber.BeginString=Prefixo
-DocumentNumber.NumDigits =Qantidade de Dígitos
-DocumentNumber.ObjType=Tipo de Documento
-Project.Period=Período
-Commom.TotalBalance=Saldo Total
-Project.PercentOverInitBalance=% em relação ao saldo inicial
-
-PurchaseRequest.ProjectNotLinked=Solicitação de compra sem vinculo com projeto
-Document.Caceled=Documento cancelado
-
-Commom.ProjectsByUser.Title = Projetos por usuário
-ProjectsByUser.CodProject = Código
-ProjectsByUser.NameProject = Nome do projeto
-ProjectByUser.NoProjectsFound = Nenhum projeto encontrado
-ProjectByUser.SelectProjects = Selecionar projetos disponíveis
-ProjectByUser.Projects = Projetos
-ProjectByUser.Users = Usuários
-ProjectByUser.Username = Usuário
-ProjectByUser.Department = Departamento
-ProjectByUser.Edit = Editar
-ProjectByUser.Reset = Resetar
-ProjectByUser.ProjectPerUser = Projetos por usuário
-ProjectByUser.ProjectsLinked = Projetos vinculados
-ProjectByUser.ProjectsUnLinked = Projetos disponíveis
-ProjectByUser.QstMsgRemoveProject = Deseja remover este projeto?
-ProjectByUser.MsgCaseSucessRemove = Projeto deletado com sucesso!
-ProjectByUser.MsgUpdateRules = Permissões de projetos deste usuário foram atualizadas com sucesso!
-ProjectByUser.TotalUsersByProject = Total de usuários
-Notifications.NoData=Sem Notificações
+App.Performance=Performance
+Commom.Menu.Logged=Conectado
+Commom.UserConfig=Configurações
+Commom.LogOut=Sair
+Commom.Home=Início
