--- a/generators/app/templates/ui5/webapp/i18n/i18n.properties
+++ b/generators/app/templates/ui5/webapp/i18n/i18n.properties
@@ -1,60 +1,7 @@
 
-MasterView.tittle=Contract One
-appDescription=Supply Chain Management and Execution of Service Contracts
-#Requisiçao 
-RequestPurchese.Id=Request Code
-RequestPurchese.All=All
-RequestPurchese.Approved=Approved
-RequestPurchese.Pending=Pending
-RequestPurchese.Canceled=Canceled
-RequestPurchese.CorrectionRequest=Correction Request
-RequestPurchese.Attended=Attended
-RequestPurchese.Closed=Closed
-RequestPurchese.Repproved=Repproved
-RequestPurchese.OnQuotation=On Quotation
-RequestPurchese.AttendedPartial=Partial
-RequestPurchese.ApprovedPartial=Partial
-RequestPurchese.OnApproval=On Approval
-RequestPurchase.Approval=Confirm Approval?
-RequestPurchase.Confirm=Comfirm
-RequestPurchase.Reprove=Reprove this request?
-RequestPurchase.ApproveAll=Confirm All?
-RequestPurchase.ReproveAll=Reprove All?
-#Requisiçao Detail
-RequestPurchaseDetail.Company=Company
-RequestPurchaseDetail.Partner=Partner
-RequestPurchaseDetail.Notes=Notes
-RequestPurchaseDetail.Itens=Items
-RequestPurchaseDetail.ItemCode=ItemCode
-RequestPurchaseDetail.Item=Item
-RequestPurchaseDetail.Quantity=Quantity
-RequestPurchaseDetail.RequestId=Request
-RequestPurchaseDetail.Project=Project
-RequestPurchaseDetail.DateNeed= Date Need
-RequestPurchaseDetail.DateAdd=Date Add
-RequestPurchaseDetail.Status= Status
-RequestPurchaseDetail.QuantityItems=Items Total
-RequestPurchaseDetail.CenterCost=Canter Cost
-RequestPurchaseDetail.Attach=Attachments
-#Request Purchase Edit
-RequestPurcheseEdit.Title=Edit Request Purchase
-RequestPurchaseEdit.Cabecalho=Request Header
-RequestPurchaseEdit.CenterCost=Center Cost
-RequestPurchaseEdit.MeasurementUnit=Unit
-RequestPurchaseEdit.Updated=Request Puchase updated
-RequestPurchaseEdit.Created=Request Puchase created
-#Commom
-Commom.Menu.RequestPurchese=Resquest Purchese
-Commom.Menu.RequestPurcheseDetail=Detail
-Commom.tableNoDataText=No data
-Commom.tableIDColumnTitle=Code
-Commom.tableNameColumnTitle=Description
-Commom.tablePriceColumnTitle=Price
-Commom.tableCompanyCode=Company Code
-Commom.tableCompanyName=Company Name
-Commom.tableCommentsColumnTitle=Comments
-Commom.tableStatusColumnTitle=Status
-Commom.tableDateAddColumnTitle=Added
+App.Name=<%= appName %>
+App.Description=<%= appDescription %>
+
 Commom.Accept=Acept
 Commom.Reject=Reject
 Commom.AcceptAll=Accept All
@@ -68,331 +15,16 @@ Commom.Updated=Atualizado com sucesso
 Commom.NoProducts=No Products Found
 Commom.SelectProducts=Select Product
 Commom.CenterCosts=Center Costs
-#Request Status
-RequestStatus.Title=Request Status
 
-#Approvals
-Approvals.Title = Approvals
-Approvals.Request=Request Purchase
-
-#Contract
- Contract.Title=Contracts
-
-#RequestPurchaseWizard                        
-RequestPurchaseWizard.SelectItems=Select the quotation items
-RequestPurchaseWizard.SelectCenterCosts=Select the center costs
-RequestPurchaseWizard.Items=Items
-RequestPurchaseWizard.Title=Create a new request purchase
-RequestPurchaseEdit.CompanyAndProject=Company
-RequestPurchaseWizard.MinimumLines=A request must be contain one or more items
-
-                        
-Menu.home=Home
-Menu.login=Login
-Menu.signup=Sing Up     
-RequestPurchaseDetail.SourceId=Source
-RequestPurchaseDetail.Contract=Contract
-Commom.NoUsers=Users not found
-Commom.SelectAnUSer=Select an user
-Commom.NoContracts=No contracts found
-Commom.SelectAContract=Select a contract
-RequestPurchaseDetail.RequesterId=Requester
-RequestPurchaseEdit.DateNeed=Date Document
-RequestPurchaseEdit.DateAndStatus=Date and Status
-RequestPurchaseEdit.InsertItems=Add items
-RequestPurchaseDetail.Priority=Priority
-RequestPurchaseEdit.FileUpload=To add files, you can also use drag and drop on your desktop or tablet.
-RequestPurchaseEdit.Notes=Notes
-RequestPurchaseEdit.RequestNotes=Request Notes
-Approval.RequestPurchase=Request Puchase
-Approval.RequestsPurchase=Requests Puchase
-Approval.Contracts=Contracts
-Commom.Menu.Approvals=Approvals
-Commom.Added = Created
-Approval.Contracts=Contracts
-Commom.Id=Code
-Commom.ObjectType=Type
-Approvals.PendingApproval=Pending Approval
-
-Commom.Ok=OK
-Commom.Remove=Remove
-Commom.ApplyOnLines=Apply on lines
-Commom.CenterCostsOnLines=Set header center costs on lines
-Commom.SetCenterCostOnAllLines=Set header center costs on all lines
-Commom.LineCenterCostsUpdated = Center costs of line updated
-Commom.LinesCenterCostsUpdated = Center costs of lines updated
-RequestPurchaseDetail.Historic=Historic
-Commom.NoHistory=No Historic
-RequestPurchese.Number=N°
-Commom.Comments=Comments
-Item.IsSale=Sale item
-Item.IsPurchase=Pruchase Item
-Item.OnHand=On hand:
-Item.InvntItem=Inventory Item
-Commom.ItemInfo=Item info
-Commom.Close=Close
-Commom.Yes=Yes
-Commom.No=No
-Commom.SetCenterCostOnLine=Copy From Header
-Commom.Approved=Approved
-Commom.Menu.ApprovalModels=Approval Models
-ApprovalModels.RequestPurchase=Request Purchase
-ApprovalModels.Contracts=Contract
-ApprovalModels.Measurements=Measurements
-ApprovalModel.Id=Id
-Commom.Document=Document
-ApprovalModel.DateVigency=Vigency
-ApprovalModel.EffectiveDate=Effective Date
-ApprovalModel.User=User
-ApprovalModels.All=All
-ApprovalModel.Title=Approval Model
-ApprovalModel.EffectiveDate=Effective Date
-ApprovalModel.IsRange=By Range
-ApprovalModel.IsAuto=Automatic
-ApprovalModel.Vigency=Vigency
-Commom.VigencyAt=Valid until
-ApprovalModel.ApprovalModel=Approval model
-ApprovalModel.IsQuery=Query
-ApprovalModel.ValueRange=Range values
-ApprovalModel.AnyValue=Any value
-ApprovalModel.StartAt=Start at
-ApprovalModel.EntAt=End at
-ApprovalModel.RangeDecision=Decision
-ApprovalModel.ApprovalLevels=Approval Levels
-ApprovalModel.Sequence=Sequence
-ApprovalModel.Description=Description
-ApprovalModel.FontColor=Fore Color
-ApprovalModel.BackColor=Back Color
-ApprovalModel.ApprovalLevelsNoData=Without defined level
-ApprovalModel.ValueRangeNoData=Without defined value range
-ApprovalModel.Approvers=Approvers
-ApprovalModel.ApproversNoData=No Approvers
-ApprovalModel.UserCode=User code
-ApprovalModel.UserName=User name
-ApprovalModel.UserApprover=User Approver
-ApprovalModel.IsAutoSelectedMessageStrip=For the automatic model, it is only necessary to set the effective date and save the model.
-ApprovalModel.HasRangeSelectedMessageStrip=With the range of values, you can specify a value criterion for that document type, and set the levels required for each range or for any value.
-ApprovalModel.SelectARange=Select an range
-ApprovalModel.SelectALevel=Select an level
-ApprovalModel.DocumentType=Document 
-ApprovalModel.Vigency=Vigency
-ApprovalModel.removelAll=Remove all
-App.Theme =Theme
-App.Density=Density
-App.ConfigTheme=Theme settings
-ApprovalModel.RangeAnyValueDefined=You set a range to any value, all new documents of this type have fallen to this approval model
-ApprovalModel.AlertRemoveOtherRanges=When defining this interval as any value the other ranges will be excluded, do you want to continue?
-App.ChangeTheme=Change theme
-ApprovalModel.QueryFilter=Query
-ApprovalModel.Company=Company
-ApprovalModel.ApprovalFlow= Approval Flow
-
-ApprovalModel.RequestFields=Fields
-ApprovalModel.HowToBuildQuery=Build Query
-ApprovalModel.HowToBuildQueryExemple=Exemple
-ApprovalModel.TestQuery=Test Query
-ApprovalModel.QueryValidated=Query Validated
-ApprovalModel.HasQuerySelectedMessageStrip=On this option you can set a query as a criteria for approval flow
-Commom.Login=Login
-Commom.Menu.Login=Login
-Commom.Menu.LoginPage=Login
-Commom.EnterPass=Enter password
-Commom.Password=Password
-Commom.User= User
-errorOnRequest = Could not fetch requested information
-defaultMessageError = Sorry, We can not process your request
-invalidUser = Invalid user
-
-ApprovalModel.NoLoggedUser=Sign in to use the system
-Commom.LogOut=Logout
-Commom.Menu.Logged=Logged User
-Commom.PendingItems=Pending Documents
-RequestPurchaseLine.Id=Line Id
-RequestPurchaseApproval.QuantityApproved=Approved Quantity
-RequestPurchaseApproval.Approved=Approved
-Commom.Home=Home
-Commom.Settings=Settings
 Commom.Notifications=Notifications
-Commom.Decision=Decision
-Commom.ChoseYourAction=Choose Your Action
-Commom.Correction=Send to correction
-RequestPurchaseApproval.Search=Search for comments or request code
-RequestPurchaseDetail.DateUpdate=Last update
-Commom.Menu.Settings=Settings
-Settings.User=User
-Settings.Pagination=Quantity of items for page load
-Settings.PerformanceLow=Low performance
-Settings.PerformanceHigh=High performance
-RequestPurchese.Open=Open
-RequestPurchaseDetail.Step=Step
-Approvals.ReturnTryApproval=Try approval return
-Approvals.CommitSuccess=Confirm success
-Approvals.CencelOperation=Cancel operation
-Approval.SuccessOperation=Operation realized with success
-Approvals.HeaderErros=The following items could not be approved
-Approval.HeaderSuccess=The following items have been successful but need to be verified
-Commom.ProcessId=Process
-Commom.UserConfig=Config
-RequestPurchaseDetail.RequesterCode=Requester Code
-RequestPurchaseDetail.RequesterName=Requester Name
-Commom.DocEntry=DocEntry
-Commom.DocNum=DocNum
-Commom.DocType=DocType
-Commom.CANCELED=Canceled
-RequestPurchaseDetail.DocDueDate=DocDueDate
-RequestPurchaseDetail.CreateDate=Create Date
-RequestPurchaseDetail.CardCode=Partner
-Commom.CustomCol=Custom cols
-Commom.Order=Order
-Commom.Filter=Filter
-Commom.SelectRangeDate=Select a range date
-Commom.ClearFilter=Clean filter
-Commom.ClearFilterToolTip=Reset all filter values
-Commom.CancelFilterToolTip=Reload data whitout filter
-Commom.SessionExpired=You Session has expired
-Commom.DocumentNumber=Document Number
-Settings.Code=Code
-Settings.InitialNumber=Start Number
-Settings.NextNumber =Next Number
-Settings.BeginString =Prefix
-Settings.NumDigits =Num Digits
-Settings.ObjType =ObjectType
-Commom.informAnComment=Comment is required
-App.Performance=Performance
-App.MaxRecordsPerSearch=Maximum records per search
-Commom.ApprovalStatusResumeTittle=Approval step resume
-Commom.Previous=Previous
-Commom.Next=Next
-Commom.ServeError=Serve access error
-Project.Budget=Budget
-RequestPurchaseDetail.ProjectCode=Project Code
-Project.CordinatorName=Cordinator 
-Project.Manager=Manager 
-Project.Executed=Executed
-Project.Remaning=Remaning
-Commom.GeneralSettings=General Settings
-Commom.MeasurementSettings=Measurement Settings
-Commom.MeasurementEdit=Measurement Edit
-Commom.ProjectExtract=Project Extract
-ProjectExtract.ProjectCode=Project Code
-ProjectExtract.SelectDate=Select a date range
-Project.Extract=Extract
-Project.ExtractFull=Extract Full
-Commom.RefDate=Ref Date
-Commom.History=History
-Commom.Type=Type
-Commom.Debit=Debit
-Commom.Credit=Credit
-Commom.Balance=Balance
-Commom.PrcName=Rubrica
-Commom.PreviusBalance=Previus Balance
-RubricaInfo.Resume=Rubrica Resume
-Commom.InitBalance=Init Balance
-Commom.ShowingPeriod=showing statement for the following period
-Commom.ShowingFullExtract=showing statement for the project
-Project.Earnings=Earnings
-WorkPlan.SelectProject=Select a project
-DocumentNumber.ObjType=Document Type
-DocumentNumber.InitNumber=Init Number
-DocumentNumber.NextNumber=Next number
-DocumentNumber.BeginString=Begin String
-DocumentNumber.NumDigits=Number of Digits
-Commom.Number=N°
-Project.Period=Period
-Commom.TotalBalance=Balance Total
-Project.PercentOverInitBalance=% over init balance
-
-PurchaseRequest.ProjectNotLinked=Purchase Request Without project link
-Document.Cancel=cancel document?
-Document.Caceled=Document canceled
-<<<<<<< HEAD
-
-MeasurementUnitGroup.FormMsgSave = Save group of measurement
-MeasurementUnitGroup.FormTitle = Create group
-MeasurementUnitGroup.FormUgpName = Group Name
-MeasurementUnitGroup.FormBaseUom = Base Unit
-MeasurementUnitGroup.FormUgpCode =  Description Group
-MeasurementUnitGroup.TableAlternativeQty = Quantity Alternative
-MeasurementUnitGroup.TableUnitAlternative = Unity Alternative
-MeasurementUnitGroup.TableQtyBase = Quantity Base
-MeasurementUnitGroup.TableDelete = Delete
-MeasurementUnitGroup.SaveGroup = Save Group
-MeasurementUnitGroup.UpdateGroup = Update Group
-MeasurementUnitGroup.UpdateSuccess = Group of Meansurement Unit create successful
-MeasurementUnitGroup.CreateSuccess = Group of Measurement created sucessful
-MeasurementUnit.MsgDeleteFalse = Delete this Unity is not possible
-MeasurementUnit.MsgDeleteTrue = Unit of Measurement deleted with successful
-MeasurementUnit.MsgCancel = Unit is not deleted
-MeasurementUnit.MsgQuestionDelete = You sure delete this Unit?
-MeasurementUnit.MsgRemove = You wish removed selecteds units?
-MeasurementUnit.MsgRemoveTrue = Units is removed successful!
-MeasurementUnit.MsgQuestionCancel = You Wish cancel editions this unit?
-MeasurementUnit.MsgQuestionDelete = You realy sure remove this group?
-MeasurementUnit.MsgCreateSuccess = Unit is created with successful!
-MeasurementUnit.MsgUpdateSuccess = Unidade atualziada com sucesso!
-MeasurementUnit.MsgQuestionSave = Wish save alterations?
-MeasurementUnit.MsgTextWarning = If you click button of cancel, all alterations is lost
-MeasurementUnit.MsgUpdateSuccess = Unit is updtated with successful
-MeasurementUnit.MsgTextSave = You need save alterations to see effects
-MeasurementUnit.TableName = Name of Measurement Unit
-MeasurementUnit.TableUomCode = Code
-MeasurementUnit.TableHeight = Height
-MeasurementUnit.TableVolume = Volume
-MeasurementUnit.TableVolUnit = Unit of Volume
-MeasurementUnit.TableLength = Length
-MeasurementUnit.TableWidth1 = Width
-MeasurementUnit.TableWeight = Weight
-MeasurementUnit.TableEdit = Edit
-MeasurementUnit.TableDelete = Remove
-MeasurementUnit.TableButtonEdit = Edit
-MeasurementUnit.ButtonSearchReset = Reset
-MeasurementUnit.ButtonSort = Sort
-MeasurementUnit.ButtonGroup = Group
-MeasurementUnitGroup.ButtonReset = Reset
-MeasurementUnit.ButtonReset = Reset
-
-
-
-MeasurementUnit.FormUomCode = Code UM
-MeasurementUnit.FormVolUnit = Volume of Unity
-MeasurementUnit.FormName = Name of UM
-MeasurementUnit.FormHeight = Height
-MeasurementUnit.FormVolume = Volume
-MeasurementUnit.FormWidth1 = Width
-MeasurementUnit.FormLength = Length
-MeasurementUnit.FormWeight = Weight
-MeasurementUnit.FormUnitVol = Unit of Volume Meansure
-MeasurementUnit.FormTitle = Save unit
-MeasurementUnit.TabUnit = Unit
-MeasurementUnit.TabGroup = Group
-MeasurementUnitGroup.TableName = Name of Group
-MeasurementUnitGroup.TableDescription = Description of Group
-MeasurementUnitGroup.TableEdit = Edit
-MeasurementUnitGroup.TableDelete = Delete
-MeasurementUnitGroup.ButtonSearchReset = Reset
-MeasurementUnitGroup.ButtonSort = Sort
-MeasurementUnitGroup.ButtonGroup = Group
-MeasurementUnitGroup.AddLine = Add Row
-MeasurementUnitGroup.MsgRemoveSuccess = Group Unit Removed as successful
-
-Commom.ProjectsByUser.Title = User By Project
-ProjectsByUser.CodProject = Code
-ProjectsByUser.NameProject = Name of Project
-ProjectByUser.NoProjectsFound = No project found
-ProjectByUser.SelectProjects = Select Projects
-ProjectByUser.Projects = Projects
-ProjectByUser.Users = Users
-ProjectByUser.Username = User
-ProjectByUser.Department = Department
-ProjectByUser.Edit = Edit
-ProjectByUser.Reset = Reset
-ProjectByUser.ProjectPerUser = Project per suer
-ProjectByUser.ProjectsLinked = Linked Projects
-ProjectByUser.ProjectsUnLinked = Projects Unlinkeds
-ProjectByUser.QstMsgRemoveProject = Are you sure you want to delete this project? 
-ProjectByUser.MsgCaseSucessRemove = Project is deleted with successful
-ProjectByUser.MsgUpdateRules = Project permissions for this user have been updated with successful
-ProjectByUser.TotalUsersByProject = Total Users By Project
 Commom.MailIcon=sap-icon://email
 Commom.MailReadIcon=sap-icon://email-read
 Notifications.NoData=No Notifications
+Commom.Menu.Settings=Settings
+Settings.User=User
+Commom.GeneralSettings=General
+App.Performance=Performance
+Commom.Menu.Logged=Connected
+Commom.UserConfig=Settings
+Commom.LogOut=LogOut
+Commom.Home=Home
