--- a/generators/app/templates/ui5/webapp/i18n/i18n.properties
+++ b/generators/app/templates/ui5/webapp/i18n/i18n.properties
@@ -1,6 +1,8 @@
-
+#DashBoard
 App.Name=<%= appName %>
 App.Description=<%= appDescription %>
+App.CompanyLink=<%= companyLink %>
+App.Performance=Performance
 
 Commom.Accept=Acept
 Commom.Reject=Reject
@@ -19,12 +21,16 @@ Commom.CenterCosts=Center Costs
 Commom.Notifications=Notifications
 Commom.MailIcon=sap-icon://email
 Commom.MailReadIcon=sap-icon://email-read
-Notifications.NoData=No Notifications
-Commom.Menu.Settings=Settings
-Settings.User=User
+Commom.Settings=Settings
+Commom.User=User
 Commom.GeneralSettings=General
-App.Performance=Performance
 Commom.Menu.Logged=Connected
-Commom.UserConfig=Settings
 Commom.LogOut=LogOut
 Commom.Home=Home
+Commom.Password=Password
+Commom.Login=Login
+
+#Notifications
+Notifications.NoData=No Notifications
+App.Theme=Theme
+Setting.MaxRecordsPerSearch=Max records for search
