--- a/generators/app/templates/ui5/webapp/i18n/i18n_pt_BR.properties
+++ b/generators/app/templates/ui5/webapp/i18n/i18n_pt_BR.properties
@@ -1,6 +1,8 @@
 #DashBoard
 App.Name=<%= appName %>
 App.Description=<%= appDescription %>
+App.CompanyLink=<%= companyLink %>
+App.Performance=Performance
 
 Commom.Accept=Aprovar
 Commom.Reject=Reprovar
@@ -13,17 +15,17 @@ Commom.Selected=Selecionado(s)
 Commom.NoProducts=Nenhum produto encontrado
 Commom.SelectProducts=Selecione os itens
 Commom.CenterCosts=Centros de Custo
-
-Notifications.NoData=Nenhuma Notificação
-
 Commom.Notifications=Notificações
 Commom.MailIcon=sap-icon://email
 Commom.MailReadIcon=sap-icon://email-read
-Commom.Menu.Settings=Configurações
-Settings.User=Usuario
+Commom.Settings=Configurações
 Commom.GeneralSettings=Geral
-App.Performance=Performance
-Commom.Menu.Logged=Conectado
-Commom.UserConfig=Configurações
 Commom.LogOut=Sair
 Commom.Home=Início
+Commom.User=Usuário
+Commom.Menu.Logged=Conectado
+Commom.NoLoggedUser=Faça login para utilizar o sistema
+#Notifications
+Notifications.NoData=Nenhuma Notificação
+App.Theme=TEma
+Setting.MaxRecordsPerSearch=Quantidade máxima de registros por busca
