--- a/generators/app/templates/ui5/webapp/i18n/i18n.properties
+++ b/generators/app/templates/ui5/webapp/i18n/i18n.properties
@@ -29,6 +29,7 @@ Commom.LogOut=LogOut
 Commom.Home=Home
 Commom.Password=Password
 Commom.Login=Login
+Commom.NoLoggedUser=Sign in to use the system
 
 #Notifications
 Notifications.NoData=No Notifications
