--- a/generators/app/templates/ui5/webapp/i18n/i18n.properties
+++ b/generators/app/templates/ui5/webapp/i18n/i18n.properties
@@ -1,37 +1,83 @@
-#DashBoard
+#Application
+App.Theme=Tema
 App.Name=<%= appName %>
 App.Description=<%= appDescription %>
 App.CompanyLink=<%= companyLink %>
 App.Performance=Performance
+App.DasboardTitle=Dash Board - Exemplo Consumindo tabela Fipe
 
-Commom.Accept=Acept
-Commom.Reject=Reject
-Commom.AcceptAll=Accept All
-Commom.RejectAll=Reject All
-Commom.Edit=Edit
-Commom.Save=Save
-Commom.Cancel=Cancel
-Commom.Add=New
-Commom.Selected=Selected
-Commom.Updated=Atualizado com sucesso
-Commom.NoProducts=No Products Found
-Commom.SelectProducts=Select Product
-Commom.CenterCosts=Center Costs
+#Settings
+Setting.MaxRecordsPerSearch=Quantidade máxima de registros por busca
 
-Commom.Notifications=Notifications
+#Commom
+Commom.Accept=Aprovar
+Commom.Reject=Reprovar
+Commom.Edit=Editar
+Commom.Save=Salvar
+Commom.Cancel=Cancelar
+Commom.Close=Fechar
+Commom.Confirm = Confirmar
+Commom.Add=Adicionar
+Commom.New=Novo
+Commom.Selected=Selecionado(s)
+Commom.NoProducts=Nenhum produto encontrado
+Commom.SelectProducts=Selecione os itens
+Commom.CenterCosts=Centros de Custo
+Commom.Notifications=Notificações
 Commom.MailIcon=sap-icon://email
 Commom.MailReadIcon=sap-icon://email-read
-Commom.Settings=Settings
-Commom.User=User
-Commom.GeneralSettings=General
-Commom.Menu.Logged=Connected
-Commom.LogOut=LogOut
-Commom.Home=Home
-Commom.Password=Password
-Commom.Login=Login
-Commom.NoLoggedUser=Sign in to use the system
+Commom.Settings=Configurações
+Commom.GeneralSettings=Geral
+Commom.LogOut=Sair
+Commom.Login=Entrar
+Commom.Password=Senha
+Commom.Home=Início
+Commom.User=Usuário
+Commom.Menu.Logged=Conectado
+Commom.NoLoggedUser=Faça login para utilizar o sistema
+Commom.Clear =Limpar
+Commom.Remove =Remover
+Commom.ProcessDefinition=Definição de Processo
+Commom.ProcessGeneralInfo=informações gerais
+Commom.Name=Nome
+Commom.Description=Descrição
+Commom.Id=#
+Commom.Process=Processo
+Commom.Stage=Etapa
+Commom.Stages=Etapas
+Commom.Type=Tipo
+Commom.Mandatory=Obrigatório
+Commom.Yes=Sim
+Commom.No=Não
+Commom.Optional=Opcional
+Commom.Close=Fechar
+Commom.RemoveSelected=Remover Seleção
+Commom.Confirm=Confirmar
+Commom.Msg=Menssagem
+Commom.Priority=Prioridade
+Commom.ProcessView=Vizualizar Processo
+Commom.ZoomInLimit=Zoom maximo
+Commom.ZoomOutLimit=Zoom minimo
+Commom.Order=Ordem
+Commom.Position=Posição
+Commom.NoSelection=Nenhum registro selecionado
+Commom.Conclude=Concluir
+Commom.Icon=Icone
+Commom.None=Nenhum(a)
+Commom.SuccessAction=Ação realizada com sucesso
+Commom.Language=Linguagem
+Commom.Translate=Tradução
+Commom.Labels=Labels
+Commom.All=Tudo
+Commom.Custom=Customizados
+Commom.System=Sistema
+Commom.IgnoreInfoAndWarning=Ignorar Alertas e informações?
+Commom.AddClose=Adicionar e Fechar
+Commom.Select=Selecione
+Commom.Project=Projeto
+Commom.StageType=Tipo de etapa
+Commom.ChangeIcon=Alterar ícone
+commom.Icon=Ícone
+Commom.Exemples=Custom control Exemplos
 
-#Notifications
-Notifications.NoData=No Notifications
-App.Theme=Theme
-Setting.MaxRecordsPerSearch=Max records for search
+
