--- a/generators/app/templates/angular/webapp/i18n/i18n.properties
+++ b/generators/app/templates/angular/webapp/i18n/i18n.properties
@@ -2,9 +2,9 @@
 App.Theme=Tema
 App.Name=<%= appName %>
 App.Description=<%= appDescription %>
-App.<%= appDescription %>=http://inventsoftware.com.br
+App.Link=http://inventsoftware.com.br
 App.Performance=Performance
-App.DasboardTitle=Dash Board - Exemplo Consumindo tabela Fipe
+App.DasboardTitle=Dash Board
 
 #Settings
 Setting.MaxRecordsPerSearch=Quantidade máxima de registros por busca
