tela de linguagem

--- a/generators/app/templates/angular/webapp/i18n/i18n.properties
+++ b/generators/app/templates/angular/webapp/i18n/i18n.properties
@@ -79,5 +79,5 @@ Commom.StageType=Tipo de etapa
 Commom.ChangeIcon=Alterar ícone
 commom.Icon=Ícone
 Commom.Exemples=Custom control Exemplos
-
-
+Commom.LanguageSub=Customizar labels
+Commom.ControlTest=Teste de Controles
