--- a/generators/app/templates/app/webapp/i18n/i18n.properties
+++ b/generators/app/templates/app/webapp/i18n/i18n.properties
@@ -1,14 +1,15 @@
 #Application
 App.Theme=Tema
 App.Name=<%= appName %>
-App.Description=<%= appDescription %>
+App.Description=<%= shortName %>
 App.Link=http://inventsoftware.com.br
 App.Performance=Performance
 App.DasboardTitle=Dash Board
 
 #Settings
 Setting.MaxRecordsPerSearch=Quantidade máxima de registros por busca
-
+Setting.CurrentTheme=Atual
+Setting.ClickToApply=Click para aplicar
 #Commom
 Commom.Accept=Aprovar
 Commom.Reject=Reprovar
@@ -81,3 +82,7 @@ commom.Icon=Ícone
 Commom.Exemples=Custom control Exemplos
 Commom.LanguageSub=Customizar labels
 Commom.ControlTest=Teste de Controles
+
+Commom.Apply=Aplicar
+Commom.Key=Key
+Commom.ApiTeste=ApiTeste
