--- a/generators/app/templates/app/webapp/i18n/i18n.properties
+++ b/generators/app/templates/app/webapp/i18n/i18n.properties
@@ -1,7 +1,7 @@
 #Application
 App.Theme=Tema
 App.Name=<%= appName %>
-App.Description=<%= shortName %>
+App.Description=Descrição do aplicativo
 App.Link=http://inventsoftware.com.br
 App.Performance=Performance
 App.DasboardTitle=Dash Board
